# GenDC

./: .gitignore  README.md  pyproject.toml  requirement.txt
.github/workflows/: Develop-Linux.yml  Develop-Windows.yml  Release.yml
gendc_cpp/: README.md  meson.build  meson_options.txt  vcpkg.json
gendc_cpp/gendc/: gendc.cpp  meson.build
gendc_cpp/gendc_separator/: ComponentHeader.h  ContainerHeader.h  Descriptor.h  PartHeader.h  tools.h
gendc_cpp/gst/: meson.build
gendc_cpp/gst/gendcparse/: gstgendcparse.c  gstgendcparse.h  meson.build  pipelines.md
gendc_cpp/gst/gendcseparator/: gstgendcseparator.c  gstgendcseparator.h  meson.build  pipelines.md
gendc_cpp/include/: gendc.h
gendc_cpp/tests/: meson.build
gendc_cpp/tests/check/: meson.build
gendc_cpp/tests/check/elements/: gendcparse.c  gendcseparator.c
gendc_cpp/tests/windows/: meson.build
