
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gendc_separator"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "GenDC Seprator package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Sensing-Dev/GenDC"
Issues = "https://github.com/Sensing-Dev/GenDCt/issues"